--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/categories">Categories</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="guillesanbri.com/">Blog</a>
+            <a href="guillesanbri.com/categories">Categories</a>
+            <a href="guillesanbri.com/about">About</a>
           </nav>
         </header>
       </div>
